--- a/header.html
+++ b/header.html
@@ -24,22 +24,17 @@
 
         <a href="javascript:void(0);" class="icon" onclick="myFunction()">&#9776;</a>
 
-        <div class="dropdown">
             <a href="about.html">About Us</a>
-        </div>
-        <div class="dropdown">
             <a href="resources.html">Patient Resources</a>
-            <div class="dropdown-content">
+            <!-- <div class="dropdown-content">
                 <a href="policy.html">Policies</a>
                 <a href="forms.html">Forms</a>
                 <a href="guide.html">Practice Guide</a>
                 <a href="medical.html">Medical Info</a>
                 <a href="online.html">Online Resources</a>
-            </div>
-        </div>
+            </div> -->
             <a href="contact.html">Contact Us</a>
-        <div class="dropdown">
             <a href="covid.html">COVID-19</a>
-        </div>
+
 
     </div>
