--- a/header.html
+++ b/header.html
@@ -24,7 +24,7 @@
 
         <a href="javascript:void(0);" class="icon" onclick="myFunction()">&#9776;</a>
 
-            <a href="about.html">About Us</a>
+            <a href="about.html#phil">About Us</a>
             <a href="resources.html">Patient Resources</a>
             <!-- <div class="dropdown-content">
                 <a href="policy.html">Policies</a>
@@ -33,7 +33,7 @@
                 <a href="medical.html">Medical Info</a>
                 <a href="online.html">Online Resources</a>
             </div> -->
-            <a href="contact.html">Contact Us</a>
+            <a href="contact.html#contact">Contact Us</a>
             <a href="covid.html">COVID-19</a>
 
 
