--- a/contact.html
+++ b/contact.html
@@ -6,7 +6,6 @@
     <title>Professional Park Pediatrics - Home</title>
 
     <link rel="stylesheet" type="text/css" href="../styles/all.css" media="all">
-    <link href="https://fonts.googleapis.com/css?family=Chelsea+Market&display=swap" rel="stylesheet">
 
 
     <script src="https://code.jquery.com/jquery-3.3.1.js"
@@ -23,7 +22,7 @@
 
 <body>
     <div id="header"></div>
-    <h2>Contact Us</h2>
+    <h2 id="contact">Contact Us</h2>
     <br/>
     <div class="mainWrapper">
         <p> 1881 Professional Park Circle, Suite 80, Tallahassee, FL 32308
