--- a/medical.html
+++ b/medical.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <title>Professional Park Pediatrics - Home</title>
     
-    <link rel="stylesheet" type="text/css" href="../styles/all.css" media="all">
+     <link rel="stylesheet" type="text/css" href="../styles/all.css" media="all">
+ <meta name="viewport" content="width=device-width, initial-scale=1">
  <meta name="viewport" content="width=device-width, initial-scale=1">     
     
 <script
