--- a/policy.html
+++ b/policy.html
@@ -41,10 +41,10 @@
         <p>
             The increasing costs of health care are or should be a concern to all. Advances in technology, expectations
             of
-            the public, insurance costs, and inflation all have contributed to the rising cost of medical care . We
+            the public, insurance costs, and inflation all have contributed to the rising cost of medical care. We
             encourage you to pay for services as they are rendered. This keeps down our costs and thus yours. If you
             have a
-            question about our fees we would prefer that you speak with us directly to avoid any miscommunication.
+            question about our fees, we would prefer that you speak with management directly to avoid any miscommunication.
         </p>
 
         <h3 id="insurance"> Insurance </h3>
@@ -99,7 +99,7 @@
             answer
             your questions and discuss the scientific data behind the safety of currently recommended vaccines. We
             follow
-            the CDC/AAP recommendation on immunization schedule, and are happy to explain the rational behind it. We do
+            the CDC/AAP recommendation on immunization schedule, and are happy to explain the rationale behind it. We do
             not
             recommend alternative schedules. </p>
 
