--- a/about.html
+++ b/about.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <title>Professional Park Pediatrics - Home</title>
 
-     <link rel="stylesheet" type="text/css" href="../styles/all.css" media="all">
- <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" type="text/css" href="../styles/all.css" media="all">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 
 
     <script src="https://code.jquery.com/jquery-3.3.1.js"
@@ -30,16 +30,25 @@
 
     <div id="header"></div>
     <h2 id="phil"> Our Philosophy </h2>
-    <p class="purpose2"> Your children’s well-being is our main priority. Our board-certified doctors specialize in the
+    <p class="purpose2"> Your children’s well-being is our main priority. Our board-certified doctors and experienced nurse
+        practitioners specialize in the
         care of children and adolescents. We are in a group practice to ensure that help is available at all times to
         meet your children’s needs.
 
         </br>
         </br>
         In our practice, each patient is assigned to a primary physician of their choice. We make every effort for your
-        child to see their primary physician for their well-child visits. However, night and weekend coverage is handled
+        child to see their preferred provider for their well-child visits. For same-day acute-care visits though,
+        appointments are made as providers' schedules permit, and your child may see a different provider. However,
+        night and weekend coverage is handled
         on a rotating basis by our four physicians. This includes newborn care at the hospital and inpatient care on the
         pediatric floor of Tallahassee Memorial Hospital.
+
+        </br>
+        </br>
+
+        Our nurse practitioners, though not assigned patients themselves, provide ongoing care for a variety of
+        conditions, including well-child visits and same-day sick visits.
 
         </br>
         </br>
@@ -113,11 +122,11 @@
     <br />
     <br />
     <br />
-<!-- 
+    <!-- 
     <h2 id="staff"> Office Staff</h2>
     <p class="bio"><strong>Lori DeSherlia</strong> Office Manager</p>
     <p class="bio"><strong>Julie Lanier</strong> Nursing Manager</p> -->
-<!-- 
+    <!-- 
     <footer>
         Copyright &copy; 2020
     </footer> -->
