--- a/about.html
+++ b/about.html
@@ -94,7 +94,7 @@
 
         <figure>
             <img class="bioimg" id="Marci" src="/images/Marci.jpg"></img>
-            <figcaption><a href="Marci.html">Marci Bodine</a></figcaption>
+            <figcaption><a href="Marci.html">Marci Lanier</a></figcaption>
         </figure>
     </div>
     <div class="row">
