--- a/contact.html
+++ b/contact.html
@@ -35,7 +35,15 @@
             <strong>Fax: </strong>(850) 402-5451
             <br />
             <br />
-            <strong>Hours: </strong>Monday through Friday, 8:30am - 5:00 pm.
+            <strong>Hours: </strong>Monday 8:30am-6:00pm
+            <br />
+            Tuesday 8:30am-5:00pm 
+            <br />
+            Wednesday 7:30am-5:00pm
+            <br />
+            Thursday 8:30am-5:00pm 
+            <br />
+            Friday 8:30am-5:00pm
             <br />
             <br />
             <strong> Weekday Phone Hours:</strong> Monday through Friday, 9:00am - 1:00pm, and 2:00pm - 5:00pm. Please call
