--- a/contact.html
+++ b/contact.html
@@ -46,6 +46,13 @@
             Friday 8:30am-5:00pm
             <br />
             <br />
+            <strong>Appointments Outside of Business Hours: </strong>
+            Monday 5pm-6pm
+            <br />
+            Wednesday 7:30am-8:30am
+            <br />
+            Offered for established patients only. Pre-scheduled appointments for routine or same-day care. Please call
+            the office at (850) 402-5454 to schedule the appointment.
             <strong> Weekday Phone Hours:</strong> Monday through Friday, 9:00am - 1:00pm, and 2:00pm - 5:00pm. Please call
             to arrange prenatal visits.
             <br />
