--- a/about.html
+++ b/about.html
@@ -30,30 +30,49 @@
 
     <div id="header"></div>
     <h2 id="phil"> Our Philosophy </h2>
-    <p class="purpose2"> Your children’s well-being is our main priority. Our board-certified doctors and experienced nurse
-        practitioners specialize in the
-        care of children and adolescents. We are in a group practice to ensure that help is available at all times to
-        meet your children’s needs.
+    <p class="purpose2"> Professional Park Pediatrics is your child’s Medical Home. What
+    does that mean? Your children’s well-being is our main priority.
+    Your family is important to us. We care for each child in a
+    comprehensive, well-rounded manner. Our board-certified
+    doctors and experienced nurse practitioners specialize in the
+    care of children and adolescents. We are in a group practice to
+    ensure that help is always available to meet your children’s
+    needs. Professional Park Pediatrics follows evidenced based
+    guidelines from the American Academy of Pediatrics and
+    recommended vaccines from the Center for Disease Control.
 
         </br>
         </br>
-        In our practice, each patient is assigned to a primary physician of their choice. We make every effort for your
-        child to see their preferred provider for their well-child visits. For same-day acute-care visits though,
-        appointments are made as providers' schedules permit, and your child may see a different provider. However,
-        night and weekend coverage is handled
-        on a rotating basis by our four physicians. This includes newborn care at the hospital and inpatient care on the
-        pediatric floor of Tallahassee Memorial Hospital.
+       In our practice, each patient is assigned to a primary physician
+    of their choice. Please do schedule well-child visits in advance
+    to ensure availability with your primary care physician.
+    Professional Park Pediatrics offers same-day appointments for routine and urgent needs. Same-day appointments are made on
+    a first come/first serve basis, we cannot guarantee the
+    appointment will be with your preferred primary physicians.
 
         </br>
         </br>
 
-        Our nurse practitioners, though not assigned patients themselves, provide ongoing care for a variety of
-        conditions, including well-child visits and same-day sick visits.
+        Professional Park Pediatrics is proud to have nurse practitioners
+        as part of our care team. Nurse practitioners can see your child
+        for well-child visits, same-day visits and ongoing comprehensive
+        care.
 
         </br>
         </br>
-        We strongly believe in the continuity of care for our patients. Our aim is to provide truly comprehensive health
-        care through young adulthood.
+       We strongly believe in the continuity of care for our patients.
+        Please call our office before you take your child to the
+        emergency department or urgent care. Need advice after-
+        hours? Call our main office line at (850-402-5454) to be
+        connected with one of our after-hours nurses. They are in direct
+        supervision with our providers to provide after-hours care for our
+        patients.
+
+        </br>
+        </br>
+        Professional Park Pediatrics’ mission is to provide quality,
+        comprehensive care from the newborn visit to young adulthood.
+        We’re proud to be your child’s medical home!
     </p>
 
     <h2 id="prov">Doctors</h2>
