--- a/forms.html
+++ b/forms.html
@@ -27,7 +27,16 @@
     <br/>
     <div class="mainWrapper">
     <p>
-        <a href="/pdfs/Consent_To_Treat.pdf" target="_blank">Consent To Treat</a>
+        <a href="/pdfs/PatientCommunicationandConsenttoTreat.pdf" target="_blank">Patient Communication and Consent to Treat </a>
+        <br/>
+        <br/>
+        <a href="/pdfs/PatientDemographics.pdf" target="_blank">Patient Demographics/a>
+        <br/>
+        <br/>
+        <a href="/pdfs/FamilyMedicalHistory.pdf" target="_blank">Family Medical History </a>
+        <br/>
+        <br/>
+        <a href="/pdfs/PoliciesandProcedures.pdf" target="_blank">Policies and Procedures</a>
         <br/>
         <br/>
         <a href="/pdfs/disclosure consent 7.18.pdf" target="_blank"> New Patient Consent Form </a>
