--- a/index.html
+++ b/index.html
@@ -25,6 +25,18 @@
 <div id="header"></div>
 
 <p class="purpose"> Welcome to Professional Park Pediatrics!</p>
+<p><strong>Hours: </strong>Monday 8:30am-6:00pm
+            <br />
+            Tuesday 8:30am-5:00pm 
+            <br />
+            Wednesday 7:30am-5:00pm
+            <br />
+            Thursday 8:30am-5:00pm 
+            <br />
+            Friday 8:30am-5:00pm
+            <br />
+            <br />
+</p>
 
 <div class="button_holder3">
 <a href="/guide.html"><button> <img src="/images/book.png"></img><br/>Practice Guide</button></a>
