--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 <div id="header"></div>
 
 <p class="purpose"> Welcome to Professional Park Pediatrics!</p>
-<p><strong>Hours: </strong>Monday 8:30am-6:00pm
+<p class="purpose2"><strong>Hours: </strong>Monday 8:30am-6:00pm
             <br />
             Tuesday 8:30am-5:00pm 
             <br />
